--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,120 @@
 body {
     background-color: #e9efff;
     color:black;
+    margin:20px;
+    margin-top: 0;
+}
+
+
+.skip a{
+    background: white;
+    left: 0;
+    padding: 6px;
+    -webkit-transition: top 1s ease-out;
+    transition: top 1s ease-out;
+    z-index: 1;
+    position: absolute;
+    top: -40px; 
+    left: 0;
 }
 
 h1 {
-    font: 36px "Noto Sans CJK Black";
+    font: 24px "Noto Sans CJK Black";
     left: 50%;
     text-align: center;
+    margin-top: 100px; 
 }
 
 h2 {
-    font: 24px "Noto Sans CJK Black";
+    font: 18px "Noto Sans CJK Black";
     color: #00274C;
 }
 
 h3 {
-    font: 18px "Noto Sans CJK Black";
+    font: 12px "Noto Sans CJK Black";
     color: #385672;
 }
 
 p {
-    line-height: 2; 
+    font-size: 12px;
+    line-height: 1.3; 
 }
 
 img {
-    border: 5px solid #00274C; 
-    padding: 10px;
-    margin: 20px; 
+    border: 2px solid #00274C; 
+    padding: 2px;
+    margin: 0; 
     border-top-right-radius: 30px; 
-    width: 90%;
+    width: 120%;
+    left:50%;
+}
+
+figcaption {
+    font-size: 10px; 
+    font-weight: bold;
+    color: #385672; 
+}
+
+ul {
+    word-break: break-all; 
+    width: 100%; 
 }
 
 li {
-    display: inline-block; 
-    margin-left: 50px;
+    font-size: 12px;
+    margin-right: 20px;
+} 
+
+
+.guide {
+    margin-top: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 30px;
+    background-color: #ffffff; 
+    padding: 10px;
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+    z-index: 100; 
+    border-bottom: 6px solid #00274C;
 }
 
-@media screen and (min-width: 776px){
-
-	img {
-        border: 5px solid #00274C; 
-        padding: 10px;
-        margin: 20px; 
-        border-top-right-radius: 30px; 
-        width: 70%;
-    }
-
+.guide ul {
+    margin: 30px;
+    padding: 0;
+    list-style: none;
+    justify-content: flex-start; 
+    display: flex;
+    align-items: center;
 }
 
-@media screen and (min-width: 1120px){
-	img {
-        border: 5px solid #00274C; 
-        padding: 10px;
-        margin: 20px; 
-        border-top-right-radius: 30px; 
-        width: 60%;
-    }
-	
+.guide ul li {
+    display: inline-block;
+    white-space: nowrap;
+    font-size: 12px;
+    margin-left: 20px; 
+    margin-right: 0; 
 }
+
+
+.logo {
+    width: 40px;
+    padding: 5px;
+    border: none;
+    border-radius: 0;
+    margin: 0px;
+    position: fixed;
+    top:0px;
+    left:5px;
+    z-index: 101; 
+}
+
+.content {
+    margin-top: 60px;
+    padding: 20px;
+}
+
+
