--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #eff2fb;
     color:black;
-    margin:20px;
+    margin:5%;
     margin-top: 0;
 }
 
@@ -19,7 +19,7 @@ body {
 .skip a:focus {
     top: 10px;
     height: auto;
-    background-color: yellow;
+    background-color: #FFCB05;
 }
 
 
@@ -117,6 +117,10 @@ li {
     padding: 5px;
 }
 
+.guide ul li a:hover {
+    color: #FFCB05;
+}
+
 .guide ul li a {
     color: white;
     text-decoration: none;
@@ -130,7 +134,7 @@ li {
 /* Style for the current page */
 .guide ul li .current-page {
     background-color: #eff2fb;
-    color: black;
+    color: #00274C;
 }
 
 .guide .current-page {
@@ -140,6 +144,10 @@ li {
     border-radius: 5px; /* Optional: add rounded corners */
     display: block; /* Ensures the background covers the entire area */
     box-sizing: border-box; /* Includes padding in element width */
+}
+
+.guide .current-page:hover {
+    color: #00274C;
 }
 
 
@@ -161,7 +169,7 @@ li {
 }
 
 .ulgrid li {
-    font-size: 12px;
+    /* font-size: 12px; */
     margin-right: 0;
     padding: 10px;
     border: 1px solid #ccc;
@@ -174,7 +182,7 @@ li {
     gap: 10px; 
     align-items: start;
     line-height: 1.5;
-    border: solid 1px grey;
+    border: solid 2px grey;
     padding: 10px;
 }
 
@@ -185,4 +193,93 @@ li {
     line-height: 1.5;
     border: solid 1px grey;
     padding: 10px;
+}
+
+
+
+
+
+@media screen and (min-width:600px) {
+    h1 {
+        font-size: 34px;
+        border-bottom: 5px solid #FFCB05;
+    }
+    
+    h2 {
+        font-size: 24px;
+    }
+    
+    h3 {
+        font-size: 18px;
+    }
+    
+    p {
+        font-size: 16px;
+    }
+    
+    img {
+        width: 50vw;
+    }
+
+    .img_par_grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr; /* Two equal-width columns */
+        gap: 20px; /* Space between the columns */
+        align-items: start; /* Aligns items at the top of the row */
+        margin: 20px 0; /* Optional: adds space around the grid container */
+        padding: 10px;
+        align-items: stretch;
+    }
+    
+    .img_par_grid figure, .img_par_grid p {
+        margin: 0; 
+    }
+
+    .img_par_grid p {
+        margin: 10px 0 0 0; 
+    }
+    
+    .img_par_grid img {
+        max-width: 90%; /* Ensures the image fits within its grid cell */
+        height: auto;
+    }
+
+    .img_par_grid article {
+        padding: 0 15px 15px 15px;
+        border-radius: 5px;
+        border: 4px solid #00274C;
+        background-color: #e5eaf4;
+    }
+    
+    
+    li {
+        font-size: 16px;
+    }
+
+    
+    
+    .guide .logo {
+        max-width: 50px; /* Control logo width */
+    }
+    
+    
+    /* Set ul to display flex to align items horizontally */
+    .guide ul {
+        width: 50%; /* Ensure ul spans across available width */
+    }
+    
+    .guide ul li a {
+        font-size: 15px;
+    }
+    
+    .guide .current-page {
+        padding: 10px 20px; /* Adjust padding to increase background size */
+        font-weight: bold;
+        font-size: 18px;
+    }
+
+    .ulgrid li {
+        background-color: #e5eaf4;
+    }
+    
 }
