--- a/css/style.css
+++ b/css/style.css
@@ -24,26 +24,29 @@ body {
 
 
 h1 {
-    font: 28px "Noto Sans CJK Black";
+    font: 28px "Noto Sans CJK Black" "Arial";
+    font-weight: bold;
     color: black;
     left: 50%;
     text-align: center;
-    margin-top: 80px; 
+    margin-top: 70px; 
     border-bottom: 4px solid #FFCB05;
 }
 
 h2 {
-    font: 20px "Noto Sans CJK Black";
+    font: 20px "Noto Sans CJK Black" "Arial";
+    font-weight: bold;
     color: #00274C;
 }
 
 h3 {
-    font: 18px "Noto Sans CJK Black";
+    font: 18px "Noto Sans CJK Black" "Arial";
+    font-weight: bold;
     color: #385672;
 }
 
 p {
-    font-size: 18px;
+    font: 18px "Noto Sans CJK Black" "Arial";
     line-height: 1.3; 
 }
 
@@ -57,7 +60,7 @@ img {
 }
 
 figcaption {
-    font-size: 14px; 
+    font: 14px "Noto Sans CJK Black" "Arial";
     font-weight: bold;
     color: #385672; 
 }
@@ -68,7 +71,7 @@ ul {
 }
 
 li {
-    font-size: 18px;
+    font: 18px "Noto Sans CJK Black" "Arial";
     margin-right: 20px;
 } 
 
