--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 
 
 h1 {
-    font: 30px "Noto Sans CJK Black" "Arial";
+    font: 30px "IBM Plex Sans" "Montserrat" "Noto Sans CJK Black" "Arial";
     font-weight: bold;
     color: black;
     left: 50%;
@@ -34,19 +34,19 @@ h1 {
 }
 
 h2 {
-    font: 26px "Noto Sans CJK Black" "Arial";
+    font: 26px "IBM Plex Sans" "Montserrat" "Noto Sans CJK Black" "Arial";
     font-weight: bold;
     color: #00274C;
 }
 
 h3 {
-    font: 22px "Noto Sans CJK Black" "Arial";
+    font: 22px "IBM Plex Sans" "Montserrat" "Noto Sans CJK Black" "Arial";
     font-weight: bold;
     color: #385672;
 }
 
 p {
-    font: 22px "Noto Sans CJK Black" "Arial";
+    font: 22px "IBM Plex Sans" "Montserrat" "Noto Sans CJK Black" "Arial";
     line-height: 1.3; 
 }
 
@@ -60,7 +60,7 @@ img {
 }
 
 figcaption {
-    font: 14px "Noto Sans CJK Black" "Arial";
+    font: 14px "IBM Plex Sans" "Montserrat" "Noto Sans CJK Black" "Arial";
     font-weight: bold;
     color: #385672; 
 }
@@ -71,7 +71,7 @@ ul {
 }
 
 li {
-    font: 22px "Noto Sans CJK Black" "Arial";
+    font: 22px "IBM Plex Sans" "Montserrat" "Noto Sans CJK Black" "Arial";
     margin-right: 20px;
 } 
 
@@ -210,10 +210,10 @@ li {
 footer {
     font-size: 12px;
     color: #385672;
-    background-color: #f1f4f9; /* Light background for contrast */
-    padding: 15px 20px; /* Adds space inside the footer */
-    text-align: center; /* Centers text content */
-    border-top: 1px solid #d1d5db; /* Adds a subtle top border */
+    background-color: #f1f4f9; 
+    padding: 15px 20px; 
+    text-align: center; 
+    border-top: 1px solid #d1d5db; 
 }
 
 main {
@@ -235,7 +235,7 @@ footer a:hover {
 
 
 
-@media screen and (min-width:600px) {
+@media screen and (min-width:700px) {
     h1 {
         margin-top: 90px; 
         font-size: 34px;
